--- a/README.adoc
+++ b/README.adoc
@@ -61,6 +61,18 @@ instance/adc-instances0_H.csv
 Meta file for xBRL-CSV +
 instance/adc-instances0_H.json
 
-== 
+== Arelle
 
-'d_GL02','d_GL03','d_BS01','GL02-001','GL02-002','GL02-005','GL02-006','GL02-007','GL03-001','GL03-002','GL03-003','GL03-004','GL03-005','GL03-006','GL03-007','BS09-001','BS09-002','BS09-003','BS09-005','BS09-006','BS09-007','CM07-001','CM08-001','CM01-001','CM01-002','BS01-001','BS01-002','BS01-004'
+Open instance/adc-instances0_H.json with Arelle and save XML instance as instance/adc-instances0_H.xbrl
+
+== XWand
+
+Open xBRL-XML taxonomy taxonomy/H/core.xsd
+
+Open xBRL-XML instance instance/adc-instances0_H.xbrl
+
+== XML Spy
+
+Open xBRL-XML taxonomy taxonomy/H/core.xsd
+
+Open xBRL-XML instance instance/adc-instances0_H.xbrl
